Core/tests/Ninja/Build/help.ninja
# Check that we honor --help
#
# RUN: %{builra} ninja build --help 2> %t.err
# RUN: %{FileCheck} %s < %t.err
# 
# CHECK-NOT: error:
# CHECK: Usage: {{.*}}ninja build [options] [<targets>...]
# CHECK: -f <PATH>   load the manifest
